    the message that starts the module is really a starter message (and not
    some other msg). This way, bugs caused by leaving out scheduleStart()
    for dynamically created modules can be detected.
  - wait() now makes sure it is called for a module using activity() and not
    handleMessage().
  - cModuleType now caches the cModuleInterface pointer. (Before it looked
    up the interface each time, based on the interface name.)
Sept 5, 1999
  - cSimpleModule's initialize(), activity(), handleEvent(), finish() made
    protected members so that they cannot be called directly by user code.
  - callInitialize() was added to cSimpleModule to enable calling initialize()
    from user code; callInitialize() was also added for cModule and
    cCompoundModule so that it can be used polimorphically.
  - added cModuleType::createInitStart(char *namestr, cModule *parentmod)
    convenience function to get a module up and running in one step.
    Does create()+buildInside()+callInitialize()+scheduleStart(now).
    Should work for both simple and compound modules.
    Not applicable if the module:
      - has parameters to be set
      - gate vector sizes to be set
      - gates to be connected before initialize()
    Now a simple module can be created on the fly by simply saying:
       mod = modtype->createAndInit("name",this);
       mod->scheduleStart( simTime() );
Sept 6, 1999
  - a couple of unsigned<-->signed changes (mostly in the statistics classes)
    to reduce the number of "gcc -Wall" warnings
Sept 7, 1999
  - initialize() and finish() moved to cModule, so you can define them also for
    compound modules
  - callInitialize() and callFinish() are also in cModule; they are defined
    in compound modules to recursively call themselves for submodules.
    callInitialize() for the compound module is called _before_, callFinish()
    is called _after_ the call on submodules.

Remaining -Wall warnings: "%lf", "%lg", "%le" in printf format strings.